--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SWFW/SWFW_HYZX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SWFW/SWFW_HYZX.css
@@ -505,8 +505,7 @@
     border-bottom-left-radius: 4px;
 }
 
-
-.img_HYWLLB {
+.img_ZHFS {
     width: 16px;
     height: 16px;
     cursor: pointer;
@@ -514,7 +513,41 @@
     margin-right: 5px;
 }
 
-.liHYWLLB {
+.liZHFS {
+    display: inline-block;
+    width: 150px;
+    height: 30px;
+    text-align: left;
+    margin-top: 4px;
+    cursor: pointer;
+}
+
+.img_HWZL {
+    width: 16px;
+    height: 16px;
+    cursor: pointer;
+    border: none !important;
+    margin-right: 5px;
+}
+
+.liHWZL {
+    display: inline-block;
+    width: 150px;
+    height: 30px;
+    text-align: left;
+    margin-top: 4px;
+    cursor: pointer;
+}
+
+.img_FWYS {
+    width: 16px;
+    height: 16px;
+    cursor: pointer;
+    border: none !important;
+    margin-right: 5px;
+}
+
+.liFWYS {
     display: inline-block;
     width: 150px;
     height: 30px;
