--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
@@ -186,3 +186,15 @@ li {
 input[type=text]::-ms-clear{
   display: none;
 }
+
+.div_radio {
+    cursor: pointer;
+    display: inline-block;
+}
+
+.labelFWCZ {
+    font-weight: normal;
+    font-size: 14px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
