--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/JYPX/JYPX_JJGR.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/JYPX/JYPX_JJGR.css
@@ -530,7 +530,7 @@
     cursor: pointer;
 }
 
-.img_SKXS {
+.img_FDJD,.img_FDKM {
     width: 16px;
     height: 16px;
     cursor: pointer;
@@ -538,7 +538,7 @@
     margin-right: 5px;
 }
 
-.liSKXS {
+.liFDJD,.liFDKM {
     display: inline-block;
     width: 150px;
     height: 30px;
