--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_YYPXJS/JYPX_YYPXJS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_YYPXJS/JYPX_YYPXJS.cshtml
@@ -169,7 +169,15 @@
                     <span id="spanQWSX">期望时薪</span>
                 </div>
                 <div class="divRight">
-                    <input id="QWSX" maxlength="50" column="QWSX" class="spanFWLX SRK" style="padding: 6px 12px; width: 150px; color: #999999" type="text" placeholder="请输入期望时薪" />
+                    <span id="spanQWSX_Q" class="spanFWLX SRK" style="display: inline-block; width: 150px;">
+                        <input class="inputLCFB spanFontColor" id="QWSX_Q" maxlength="9" column="QWSX_Q" type="text" style="width: 100px" />
+                        <span class="spanFontColor">元/时</span>
+                    </span>
+                    -
+                    <span id="spanQWSX_Z" class="spanFWLX SRK" style="display: inline-block; width: 150px;">
+                        <input class="inputLCFB spanFontColor" id="QWSX_Z" maxlength="9" column="QWSX_Q" type="text" style="width: 100px" />
+                        <span class="spanFontColor">元/时</span>
+                    </span>
                     <div id="divQWSXTip"></div>
                 </div>
             </div>
