--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_JJGR/JYPX_JJGR.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_JJGR/JYPX_JJGR.cshtml
@@ -195,9 +195,9 @@
                 </div>
             </div>
             <div id="divFYMS" class="divFWCZ" style="height: 253px; position: relative; z-index: 997;">
-                <div class="divLeft" style="height: 170px; vertical-align: top; margin-left: 86px;">
+                <div class="divLeft" style="height: 170px; vertical-align: top;">
                     <span class="required" style="vertical-align: top">*</span>
-                    <span id="spanFYMS" style="vertical-align: top">辅导班介绍</span>
+                    <span id="spanFYMS" style="vertical-align: top">详细说明</span>
                 </div>
                 <div class="divRight">
                     <script id="FYMS" type="text/plain" style="width:594px;height:200px;display:inline-block;">
