--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_ZYJNPX/JYPX_ZYJNPX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_ZYJNPX/JYPX_ZYJNPX.cshtml
@@ -118,7 +118,7 @@
                 </div>
             </div>
             <div id="divXS" class="divFWCZ" style="z-index: 997;">
-                <div class="divLeft">
+                <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
                     <span id="spanXS">形式</span>
                 </div>
@@ -126,7 +126,7 @@
                 </div>
             </div>
             <div id="divZQ" class="divFWCZ" style="z-index: 997;">
-                <div class="divLeft">
+                <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
                     <span id="spanZQ">周期</span>
                 </div>
