--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_ITPX/JYPX_ITPX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_ITPX/JYPX_ITPX.cshtml
@@ -117,12 +117,12 @@
                 <div id="divXLText" class="divRight" style="position: relative;">
                 </div>
             </div>
-            <div id="divDX" class="divFWCZ" style="z-index: 997;">
+            <div id="divXS" class="divFWCZ" style="z-index: 997;">
                 <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
-                    <span id="spanDX">对象</span>
+                    <span id="spanXS">形式</span>
                 </div>
-                <div id="divDXText" class="divRight" style="position: relative;">
+                <div id="divXSText" class="divRight" style="position: relative;">
                 </div>
             </div>
             <div id="divFWQY" class="divFWCZ" style="z-index: 996">
