--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_YYEJY/JYPX_YYEJY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_YYEJY/JYPX_YYEJY.cshtml
@@ -117,13 +117,51 @@
                 <div id="divXLText" class="divRight" style="position: relative;">
                 </div>
             </div>
-            <div id="divCD" class="divFWCZ" style="z-index: 997;">
-                <div class="divLeft" style="margin-left: 128px;">
+            <div id="divFWLX" class="divFWCZ" style="z-index: 997;">
+                <div class="divLeft">
                     <span class="required">*</span>
-                    <span id="spanCD">场地</span>
+                    <span id="spanFWLX">服务类型</span>
                 </div>
-                <div id="divCDText" class="divRight" style="position: relative;">
+                <div id="divFWLXText" class="divRight" style="position: relative;">
                 </div>
+            </div>
+            <div id="divBXXZ" class="divFWCZ" style="z-index: 997;">
+                <div class="divLeft">
+                    <span class="required">*</span>
+                    <span id="spanBXXZ">办学性质</span>
+                </div>
+                <div id="divBXXZText" class="divRight" style="position: relative;">
+                </div>
+            </div>
+            <div id="divRTTJ" class="divFWCZ" style="margin-top: 22px;">
+                <div class="divLeft">
+                    <span class="required">&nbsp;</span>
+                    <span id="spanRTTJ">入托条件</span>
+                </div>
+                <div class="divRight">
+                    <input id="RTTJ" maxlength="50" column="RTTJ" class="spanFWLX SRK" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder=""/>
+                    <div id="divRTTJTip"></div>
+                </div>
+            </div>
+            <div id="divYYSJ" class="divFWCZ" style="z-index: 998;">
+                <div class="divLeft">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">营业时间</span>
+                </div>
+                <div class="divRight">
+                    <span id="spanYYKSSJ" class="spanFWLX SRK" style="display: inline-block; width: 100px;">
+                        <input class="inputLCFB" id="YYKSSJ_H" maxlength="9" column="YYKSSJ_H" type="text" value="08" style="width: 40px" />
+                        <span class="spanFontColor">:</span>
+                        <input class="inputLCFB" id="YYKSSJ_M" maxlength="9" column="YYKSSJ_M" type="text" value="00" style="width: 40px; " />
+                    </span>
+                    -
+                    <span id="spanYYJSSJ" class="spanFWLX SRK" style="display: inline-block; width: 100px; ">
+                        <input class="inputLCFB" id="YYJSSJ_H" maxlength="9" column="YYJSSJ_H" type="text" value="24" style="width: 40px; " />
+                        <span class="spanFontColor">:</span>
+                        <input class="inputLCFB" id="YYJSSJ_M" maxlength="9" column="YYJSSJ_M" type="text" value="00" style="width: 40px; " />
+                    </span>
+                </div>
+                <div id="divJGTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divFWQY" class="divFWCZ" style="z-index: 996">
                 <div class="divLeft">
